--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/indonesia/third_country/partner_local/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/indonesia/third_country/partner_local/_opposite_sex.govspeak.erb
@@ -1,37 +1,35 @@
-<% content_for :body do %>
-  Make an appointment at the British embassy or consulate in Indonesia to swear an affirmation or affidavit (written statement of facts) that you’re free to marry.
+Make an appointment at the British embassy or consulate in Indonesia to swear an affirmation or affidavit (written statement of facts) that you’re free to marry.
 
-  <%= render partial: 'contact_method.govspeak.erb',
-             locals: { calculator: calculator } %>
+[Make an appointment at the embassy in Jakarta.](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-jakarta/oaths-affirmations-and-affidavits/slot_picker)
 
-  ^Contact the local civil registry office in Indonesia to find out when you need to swear your affirmation or affidavit.^
+[Make an appointment at the consulate in Bali.](https://www.consular-appointments.service.gov.uk/fco/#!/british-consulate-bali/oaths-affirmations-and-affidavits/slot_picker)
 
-  You need to complete 2 copies of the [affirmation (non religious) or affidavit (religious) of marriage form](/government/publications/marriage-in-indonesia).
-  Email one copy to the British embassy in Jakarta at least 2 days before your appointment. Take the other copy to your appointment.
+^Contact the local civil registry office in Indonesia to find out when you need to swear your affirmation or affidavit.^
 
-  $C
-  <consulate.jakarta@fco.gov.uk>
-  $C
+You need to complete 2 copies of the [affirmation (non religious) or affidavit (religious) of marriage form](/government/publications/marriage-in-indonesia).
+Email one copy to the British embassy in Jakarta at least 2 days before your appointment. Take the other copy to your appointment.
 
-  You must pay a fee to the British embassy in Jakarta - email them to find out how to pay.
+$C
+<consulate.jakarta@fco.gov.uk>
+$C
 
-  <% unless calculator.partner_is_national_of_ceremony_country? %>
-    ^Your partner must get an affirmation or affidavit as well.^
-  <% end %>
+You must pay a fee to the British embassy in Jakarta - email them to find out how to pay.
 
-  ##What you need to take
+##What you need to take
 
-  You must take all of the following to your appointment:
+You must take all of the following to your appointment:
 
-  - a copy of your affirmation or affidavit
-  <% if calculator.partner_is_national_of_ceremony_country? %>
-  - your passport and your partner’s passport or KTP (Indonesian identity card)
-  <% else %>
-  - your passport and your partner’s passport
-  <% end %>
-  - a [decree absolute or final order](/copy-decree-absolute-final-order) or [death certificate](/order-copy-birth-death-marriage-certificate/) (if you’ve been divorced or widowed)
-  - evidence if you’ve changed your name by deed poll
+- a copy of your affirmation or affidavit
+- your passport and your partner’s passport or KTP (Indonesian identity card)
+- a [decree absolute or final order](/copy-decree-absolute-final-order) or [death certificate](/order-copy-birth-death-marriage-certificate/) (if you’ve been divorced or widowed)
+- evidence if you’ve changed your name by deed poll
 
-  <%= render partial: 'services_and_fees.govspeak.erb',
-             locals: { calculator: calculator } %>
-<% end %>
+## Fees
+
+<%= render partial: 'consular_fees_table_items.govspeak.erb',
+    collection: calculator.services,
+    as: :service,
+    locals: { calculator: calculator } %>
+
+
+
