--- a/lib/smart_answer_flows/towing-rules/outcomes/limited_trailer_entitlement_2013.govspeak.erb
+++ b/lib/smart_answer_flows/towing-rules/outcomes/limited_trailer_entitlement_2013.govspeak.erb
@@ -1,7 +1,7 @@
 <% content_for :body do %>
   You can already tow trailers up to 750kg.
 
-  You can also tow heavier trailers if combined weight of trailer and vehicle isn’t more than 3,500kg maximum authorised mass (MAM).
+  You can also tow heavier trailers if the combined weight of the trailer and vehicle isn’t more than 3,500kg maximum authorised mass (MAM).
 
   ##Category BE entitlement
 
