--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_local/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/azerbaijan/uk/partner_local/_opposite_sex.erb
@@ -1,31 +1,71 @@
+##Before you start
+
 Contact the [Embassy of Azerbaijan](/government/publications/foreign-embassies-in-the-uk) before making any plans to find out about local marriage laws, including what documents you’ll need.
 
 ^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Azerbaijan](/foreign-travel-advice/azerbaijan) before making any plans.
 
-##What you need to do
+##Prove you’re free to get married
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+You need to provide an affirmation document to prove you’re legally allowed to get married. 
+It’s valid for 6 months.
 
-You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
+You need to:
 
-^A CNI issued in Scotland is valid for 3 months. A CNI issued in England, Wales or Northern Ireland will not expire. Check with your local register office to find out how long a CNI is valid if you live in the Channel Islands or the Isle of Man. You should also check with the local authorities in Azerbaijan to find out how long a CNI is valid under local law.^
-
-###Legalisation and translation
-
-You might need to exchange your UK-issued CNI for one that’s valid in Azerbaijan at the nearest embassy or consulate to where you’re getting married.
-
-You should also check if it needs to be:
-
-- ‘[legalised](/get-document-legalised)’ (certified as genuine)
-- translated - [find a translator abroad](/government/collections/list-of-lawyers), or in the UK through the [Institute of Linguists](http://www.ciol.org.uk)
-
-You should also check with the local authorities in Azerbaijan to find out if you need to provide legalised and translated copies of any other documents.
-
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
-
-<%= render partial: 'partner_naturalisation_in_uk' %>
-
-*[CNI]:certificate of no impediment
+s1. Download an [affirmation](/government/publications/azerbaijan-affirmation-of-marital-status).
+s2. Print it out but don’t sign it.
+s3. [Make an appointment at the embassy in Baku](https://www.consular-appointments.service.gov.uk/fco/#!/british-embassy-baku/notice-of-marriage-or-civil-partnership/slot_picker) to sign it.
 
 
+It costs £50 per person. You can pay in the [local currency](/government/publications/Azerbaijan-consular-fees) in cash or with a credit card or debit card.
 
+Your partner will also need an affirmation if they’re British. If they’re not, they might need an equivalent document.
+
+###What you need to bring to your appointment
+
+You’ll need to bring:
+
+- your affirmation form
+- your passport     
+- your partner’s passport or ID     
+- evidence if you’ve changed your name by deed poll
+
+If you or your partner have been divorced, widowed or previously in a civil partnership, you’ll also need:
+
+- your [decree absolute or final order](/copy-decree-absolute-final-order) (this could be a PDF and covering in email from the court) – if you’re divorced
+- your annulment certificate - if your marriage or civil partnership was annulled
+- your (or your partner’s) former spouse or civil partner’s [death certificate](/order-copy-birth-death-marriage-certificate) - if you’ve been widowed
+
+^If your divorce, civil partnership dissolution or annulment took place outside the UK, you’ll need evidence that you or your ex partner lived or were a national of that country at the time of the divorce.^
+If your documents aren’t in English or Azeri, you’ll need to bring [certified translations](/government/collections/lists-of-translators-and-interpreters) as well as the originals.
+
+##Getting married
+
+You need to:
+
+s1. Take your completed affirmation form (signed and stamped by the embassy) to the [Azerbaijani Ministry of Foreign Affairs (MFA)](http://www.mfa.gov.az/en) who will apostille the document.     
+s2. Register the marriage using the [ASAN Service](http://www.asan.gov.az/en) or in person at the Palace of Happiness. 
+
+
+$A
+Palace of Happiness 
+6 Murtuza Muxtarov Street
+Sabail Distric
+Baku
+Azerbaijan
+AZ1001
+Telephone: (+994 12) 505 60 37
+$A
+
+##After you get married
+
+Your marriage will be recognised in the UK if:
+
+- you follow the correct process according to the law in Azerbaijan
+- it would be allowed under UK law
+
+You don’t need to register your marriage in the UK.
+
+If your partner isn’t a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
+
+
+*[MFA]: Azerbaijani Ministry of Foreign Affairs
