--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/widow_male_reaching_pension_age.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/widow_male_reaching_pension_age.govspeak.erb
@@ -15,7 +15,7 @@
 
   ##Your spouse or civil partner reached State Pension age before 6 April 2016
 
-  You may be able to inherit a portion of their [Additional State Pension](/additional-state-pension/further-information) and [State Pension top up](/voluntary-national-insurance-contributions/top-up-your-state-pension) and half their Graduated Retirement Benefit. This was the earnings-related State Pension people could build up between 1961 and 1975.
+  You may be able to inherit a portion of their [Additional State Pension](/additional-state-pension/further-information) and [State Pension top up](/state-pension-top-up) and half their Graduated Retirement Benefit. This was the earnings-related State Pension people could build up between 1961 and 1975.
 
   You must have been married or in a civil partnership with your partner before 6 April 2016.
 
@@ -32,7 +32,10 @@
   You’ll keep any State Pension you inherited from your previous spouse or civil partner if you remarry or form a new civil partnership after you’ve reached State Pension age.
 
   ##Other benefits you might get
-  You might be eligible for a [Bereavement payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance), or [Bereavement Allowance](/bereavement-allowance) if you haven’t yet reached State Pension age. You might also be eligible for a bereavement payment if you’re over State Pension age but your late spouse or civil partner wasn’t getting any State Pension when they died.
+You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age and your partner died on or after 6 April 2017.
+
+If your spouse or civil partner died before 6 April 2017, you may be eligible for [Bereavement Payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance) or [Bereavement Allowance](/bereavement-allowance).
+
 
   <%= render partial: 'increase_retirement_income.govspeak.erb' %>
 <% end %>
