--- a/lib/smart_answer_flows/state-pension-through-partner/outcomes/impossibility_to_increase_pension_outcome.govspeak.erb
+++ b/lib/smart_answer_flows/state-pension-through-partner/outcomes/impossibility_to_increase_pension_outcome.govspeak.erb
@@ -11,7 +11,7 @@
 
   ##Your spouse or civil partner reached State Pension age before 6 April 2016
 
-  You may be able to inherit a portion of their [Additional State Pension](/additional-state-pension/further-information) and [State Pension top up](/voluntary-national-insurance-contributions/top-up-your-state-pension). You may also be able to inherit half their Graduated Retirement Benefit. This was the earnings-related State Pension people could build up between 1961 and 1975.
+  You may be able to inherit a portion of their [Additional State Pension](/additional-state-pension/further-information) and [State Pension top up](/state-pension-top-up). You may also be able to inherit half their Graduated Retirement Benefit. This was the earnings-related State Pension people could build up between 1961 and 1975.
 
   You must have been married or in a civil partnership with your partner before 6 April 2016.
 
@@ -25,7 +25,9 @@
 
   ###Other benefits you might get
 
-  You might be eligible for a [Bereavement payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance), or [Bereavement Allowance](/bereavement-allowance) if you haven’t yet reached State Pension age. You might be eligible for a bereavement payment if you’re over State Pension age but your late spouse or civil partner was not getting any State Pension when they died.
+ You might be eligible for a [Bereavement Support Payment](/bereavement-support-payment) if you haven’t yet reached State Pension age and your partner died on or after 6 April 2017.
+
+If your spouse or civil partner died before 6 April 2017, you may be eligible for [Bereavement Payment](/bereavement-payment), [Widowed Parent’s Allowance](/widowed-parents-allowance) or [Bereavement Allowance](/bereavement-allowance).
 
   ##If you get divorced or your civil partnership is dissolved
 
