--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/greece/third_country/_opposite_sex.govspeak.erb
@@ -1,16 +1,18 @@
-Contact the relevant local authorities in Greece (the town hall or the local priest) to find out about local marriage laws, including what documents you’ll need.
+## Before you start
 
-^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Greece](/foreign-travel-advice/greece) before making any plans.
+Contact the local town hall (‘dímos’) where you want to get married to find out about local marriage laws, including what documents you’ll need.
 
-##What you need to do
+^ Check the [travel advice for Greece](/foreign-travel-advice/greece) and get [legal advice](/government/collections/list-of-lawyers) before making any plans. ^
 
-You’ll be asked to provide a certificate of no impediment (CNI) to prove you’re allowed to marry.
+## Prove you’re free to get married
 
-There are 2 ways you can get a CNI:
+You need to get a certificate of no impediment (CNI) to prove you’re legally allowed to get married.
 
-- [go to the UK and post notice with a UK registrar](/marriage-abroad/y/greece/uk/partner_british/opposite_sex)
-- [go to Greece and post notice at the embassy or consulate there](/marriage-abroad/y/greece/ceremony_country/partner_british/opposite_sex)
+You can either get a CNI in:
 
-%If you choose to post notice, you’ll normally have to wait at least 13 days for your CNI. It can take longer depending on the local authorities’ processes and the time of year.%
+- [the UK](/marriage-abroad/y/greece/uk/opposite_sex)
+- [Greece](/marriage-abroad/y/greece/ceremony_country/opposite_sex)
 
-*[CNI]:Certificate of no impediment
+
+*[CNI]: certificate of no impediment
+
