--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_other/_opposite_sex.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/el-salvador/ceremony_country/partner_other/_opposite_sex.erb
@@ -44,7 +44,9 @@ You should check if your CNI needs to be legalised (certified as genuine) by the
 
 ^You don't need to stay in the country while your notice is posted.^
 
-<%= render partial: 'partner_naturalisation_in_uk' %>
+##Naturalisation of your partner if they move to the UK
+
+Your partner can apply to [become a British citizen](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they’ve lived in the UK for 3 years.
 
 ## Fees
 
