--- a/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_opposite_sex.govspeak.erb
+++ b/lib/smart_answer_flows/marriage-abroad/outcomes/countries/spain/uk/_opposite_sex.govspeak.erb
@@ -1,65 +1,86 @@
+## Before you start
 
-Civil weddings in Spain take place at a town hall, register office or district court. You must register with the local civil authorities afterwards to get an official marriage certificate if you have a religious wedding.
+Contact the [civil registry office](http://www.mjusticia.gob.es/BUSCADIR/ServletControlador?apartado=buscadorGeneral&tipo=RC&lang=en_gb) where you're planning to get married to find out about local marriage laws, including what documents you and your partner will need.
 
-^You should [get legal advice](/government/collections/list-of-lawyers) and check the [travel advice for Spain](/foreign-travel-advice/spain) before making any plans.
+%One of you must live in Spain or be a Spanish national.%
 
-%There are certain legal restrictions on getting married in Spain if neither of you lives there. If you both live outside Spain, you must check with the [civil registry](http://www.mjusticia.gob.es/BUSCADIR/ServletControlador?apartado=buscadorGeneral&tipo=RC) where you’re planning to get married to find out if this is allowed.%
+## Prove you're free to get married
 
-##What you need to do
+What you need varies across Spain.
 
-You'll be asked to provide a [certificate of no impediment (CNI)](/government/publications/example-certificate-of-no-impediment-cni), a [marital status certificate](/government/publications/marital-status-example) or both to prove you’re allowed to marry.
+The civil registry office will ask for one or both of:
 
-^Document requirements vary across Spain - check with the [civil registry](http://www.mjusticia.gob.es/BUSCADIR/ServletControlador?apartado=buscadorGeneral&tipo=RC) where you’re getting married to find out what you’ll need.^
+- a [certificate of no impediment (CNI)](/government/publications/example-certificate-of-no-impediment-cni)
+- a [marital status certificate](/government/publications/marital-status-example)
 
-Your partner must also provide their own certificates.
+If your partner is British they'll need the same certificates. If they're not British they'll need equivalent documents from their local authorities.
 
-You must apply for all certificates at least 3 months before you get married.
+^ Apply for all your certificates at least 3 months before you get married. You need to present all your paperwork when you open the marriage application at the civil registry office.
 
-## Getting a certificate of no impediment
+The civil registry office will also ask you for proof of your address. This should be:
 
-You can normally get a CNI by giving a notice of marriage at your local register office or registrar in the UK. Find your local office or registrar in [England and Wales](https://www.gov.uk/register-offices), [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us).
+- a utility bill or bank statement - if you don't live in Spain
+- your registration certificate from the town hall ('ayuntamiento') - if you live in Spain
 
-^Your CNI will be valid for 3 months in Spain.^
+If you've lived in Spain for less than 2 years, you might also need to provide the ['communication proof of address'](/government/publications/communication-regarding-proof-of-address-spain).
 
-You must then exchange your UK-issued CNI for one that’s valid in Spain.
+### Get a CNI  ('capacidad matrimonial')
 
-Download and fill in the [CNI application pack](/government/publications/uk-cni-pack) - it contains a list of the documents you’ll need.
+To get a CNI, make an appointment at your [local register office](/register-offices) to give notice of your marriage.
 
-Send the documents by registered post to the address in the application pack.
+^Contact your local register office to find out what you need to do if you live in [Scotland](http://www.nrscotland.gov.uk/files/registration/reglist.pdf), [Northern Ireland](http://www.nidirect.gov.uk/index/information-and-services/government-citizens-and-rights/births-and-registration/district-registrars-in-northern-ireland.htm), [Isle of Man](http://www.gov.im/registries/general/civilregistry), [Jersey](http://www.gov.je/pages/contacts.aspx?contactId=71) or [Guernsey.](http://www.guernseyroyalcourt.gg/article/1663/Contact-Us)^
 
-##Getting a marital status certificate
+You'll need to bring [certain documents](/marriages-civil-partnerships/documents-to-take-to-the-register-office) with you to your appointment.
 
-Download and complete the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you’ll need.
+Your notice will be publicly displayed in the register office for 28 days. You can collect your CNI after this if nobody registers an objection.
 
-You must sign the affirmation in the application pack in front of a local [notary public](http://www.notaries-directory.eu/) in Spain before you send your application to the consulate.
+You must download and fill in the [CNI application pack](/government/publications/uk-cni-pack) to exchange your UK-issued CNI for one that's valid in Spain. The pack contains a list of the documents you'll need.
 
-Send the documents by registered post to the address in the application pack.
+Send the form and documents by registered post to the address in the application pack.
 
-### What happens next
+The consulate will issue your CNI and send it to you with your original documents by registered post. You'll usually get your CNI 30 working days after the consulate receives your form and documents.
 
-The consulate will check your forms and documents, and contact you if they have any queries.
+^Your new CNI will be valid for 3 months from when your original CNI was issued.^
 
-It takes 10 working days after your payment has been approved for the consulate to process your application.
+It costs <%= format_money calculator.consular_fee(:receiving_notice_of_marriage) %> to give notice and <%= format_money calculator.consular_fee(:issuing_cni_or_nulla_osta) %> for the CNI. You'll need to pay in the [local currency](/government/publications/spain-consular-fees) or by card. Fill in the payment form in the pack.
 
-They’ll send your certificate and original documents to you by registered post.
 
-##Other requirements for Spain
+### Get a marital status certificate ('certificado de estado civil/soltería')
 
-The civil registrar may also ask for confirmation of your addresses for the past 2 years (‘confirmación de domicilio para casarse en España’).
+Download and fill in the [marital status certificate application pack](/government/publications/marital-status-certificate-for-marriage-application-pack) - it contains a list of the documents you'll need. The certificate costs <%= format_money calculator.consular_fee(:affidavit_or_affirmation_for_marriage) %>.
 
-You’ll need to show one of the following:
+You must sign the affirmation in the application pack in front of a local [notary public](http://www.notaries-directory.eu/) in Spain. They'll charge you a fee.
 
-- a letter confirming your address, eg electoral roll
-- a bank or building society statement, credit card statement
-- a mortgage statement
-- a council tax letter
-- utility bills
-- recent proof of entitlement to local or state benefits, eg tax credits, pension, education or other benefits
+Send the form and documents by registered post to the address in the application pack.
 
-If you’re asked to provide a document from the British consulate, print out a copy of the [‘communication proof of address’](https://www.gov.uk/government/publications/communication-regarding-proof-of-address-spain).
+The consulate will send your certificate and original documents to you by registered post. You'll usually get your certificate 30 working days after the consulate receives your form and documents.
 
-^You must get your documents translated if they’re not in English or Spanish.^
+## Get married
 
-%The names on all documents you provide must appear exactly as they do on your passports - if not, the authorities may refuse to allow the marriage to go ahead. You may need to provide evidence if the name on your passport is different to your birth certificate (for example marriage certificate or deed poll).%
+You can have a civil wedding or a Catholic wedding.
 
-*[CNI]:certificate of no impediment
+Other religious ceremonies aren't valid on their own. You'll need to have a civil wedding as well.
+
+### Civil weddings
+
+Take your certificates to the civil registry office where you're planning to get married. The registrar will check your documents and set a date for your wedding.
+
+### Catholic weddings
+
+Take your certificates to the priest who's going to marry you. The priest will check your documents and set a date for your wedding.
+
+^After your ceremony the priest must register your marriage at the local civil registry office. You won't be legally married until this has happened.^
+
+
+## After you get married
+
+Your marriage will be recognised in the UK if:
+
+- you follow the correct process according to the law in Spain
+- it would be [allowed under UK law](/marriages-civil-partnerships)
+
+You won't need to register your marriage in the UK.
+
+If your partner isn't a British citizen, they can apply for [British citizenship](/becoming-a-british-citizen/if-your-spouse-is-a-british-citizen) once they've lived in the UK for 3 years.
+
+*[CNI]: certificate of no impediment
