--- a/lib/smart_answer_flows/maternity-paternity-calculator/outcomes/paternity_not_entitled_to_leave_or_pay.govspeak.erb
+++ b/lib/smart_answer_flows/maternity-paternity-calculator/outcomes/paternity_not_entitled_to_leave_or_pay.govspeak.erb
@@ -51,9 +51,9 @@
                  locals: {employment_start: employment_start} %>
     <% end %>
 
-    You must write confirming this. Also, send them form OSP1 confirming they’re not entitled to pay within 28 days of their pay request.
+    You must write confirming this. Also, send them form SPP1 confirming they’re not entitled to pay within 28 days of their pay request.
 
-    $D [Download Form OSPP1, refusing Statutory Paternity Pay (PDF, 100KB)](http://www.hmrc.gov.uk/forms/spp1.pdf) $D
+    $D [Download Form SPP1, refusing Statutory Paternity Pay (PDF, 100KB)](http://www.hmrc.gov.uk/forms/spp1.pdf) $D
 
   <% end %>
 <% end %>
