Replace markdown links with html anchor
This commit fixes an error where markdown link were used in a
title content tag.

This title content tag isn't converted [1] from markdown to
html [2] and hence this breaks.

[1] https://github.com/alphagov/smart-answers/blob/master/app/presenters/question_presenter.rb#L15
[2] https://github.com/alphagov/smart-answers/blob/master/lib/smart_answer/erb_renderer.rb#L23

--- a/lib/smart_answer_flows/simplified-expenses-checker/questions/is_vehicle_green.govspeak.erb
+++ b/lib/smart_answer_flows/simplified-expenses-checker/questions/is_vehicle_green.govspeak.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  What are the car’s [CO2 emissions](/get-vehicle-information-from-dvla)?
+  What are the car’s <a href="/get-vehicle-information-from-dvla">CO2 emissions</a>?
 <% end %>
 
 <% options(
